# flickr2pelican

./: .drone.yml  .travis.yml  Dockerfile.tests  Jenkinsfile  README.md  pyproject.toml  setup.cfg  tox.ini
src/flickr2pelican/: __init__.py  cli.py  core.py  photo.py
tests/: conftest.py  test_cli.py  test_core.py  test_flickr2pelican.py  test_photo.py
