[tool.poetry]
name = "flickr2pelican"
version = "0.1.0"
description = "Downloads flickr images, optimizes them and creates markdown code"
authors = ["Marvin Steadfast <marvin@xsteadfastx.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
click = "*"
flickr_api = "^0.6.1"
loguru = "^0.2.4"

[tool.poetry.dev-dependencies]
mypy = "*"
flake8 = "*"
pylint = "*"
tox = "*"
pytest = "*"
bpython = "^0.17.1"
pytest-sugar = "^0.9.2"
coverage = "^4.5"
isort = "^4.3"
black = "=18.9b0"

[tool.poetry.scripts]
flickr2pelican = "flickr2pelican.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
